--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url("./campus3.JPG");
+    background-image: url("./campus3.jpg");
     font-size: 10px;
     background-size: cover;
 }
@@ -10,7 +10,7 @@ body{
 
 /* Header Section */
 header{
-    background-image: url("./campus3.JPG");
+    background-image: url("./campus3.jpg");
     background-size: cover;
     width: 100%;
     height: 90px;
